force-app/main/default/objects/HealthScan__c/HealthScan__c.object-meta.xml
<CustomObject>
    <label>Health Scan</label>
    <pluralLabel>Health Scans</pluralLabel>
    <nameField>
        <label>Health Scan Name</label>
        <type>AutoNumber</type>
        <displayFormat>HS-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Header record for a single org health scan run. Aggregates composite score and links to all module scores and findings.</description>
</CustomObject>