force-app/main/default/objects/HealthScan__c/fields/CompositeScore__c.field-meta.xml
<CustomField>
    <fullName>CompositeScore__c</fullName>
    <label>Composite Score</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>