force-app/main/default/objects/HealthScan__c/fields/CriticalCount__c.field-meta.xml
<CustomField>
    <fullName>CriticalCount__c</fullName>
    <label>Critical Findings</label>
    <type>Summary</type>
    <summaryForeignKey>HealthFinding__c.HealthScan__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <summaryFilterItems>
        <field>HealthFinding__c.Severity__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </summaryFilterItems>
</CustomField>