force-app/main/default/objects/HealthScan__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Text</type>
    <length>2</length>
</CustomField>