force-app/main/default/objects/HealthScan__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>Org ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>