force-app/main/default/objects/HealthScan__c/fields/ScanDuration__c.field-meta.xml
<CustomField>
    <fullName>ScanDuration__c</fullName>
    <label>Scan Duration (seconds)</label>
    <formula>IF(NOT(ISBLANK(ScanEndTime__c)), (ScanEndTime__c - ScanStartTime__c) * 86400, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>