force-app/main/default/objects/HealthScan__c/fields/ScanEndTime__c.field-meta.xml
<CustomField>
    <fullName>ScanEndTime__c</fullName>
    <label>Scan End Time</label>
    <type>DateTime</type>
</CustomField>