force-app/main/default/objects/HealthScan__c/fields/ScanStartTime__c.field-meta.xml
<CustomField>
    <fullName>ScanStartTime__c</fullName>
    <label>Scan Start Time</label>
    <type>DateTime</type>
</CustomField>