force-app/main/default/objects/HealthScan__c/fields/TotalFindings__c.field-meta.xml
<CustomField>
    <fullName>TotalFindings__c</fullName>
    <label>Total Findings</label>
    <type>Summary</type>
    <summaryForeignKey>HealthFinding__c.HealthScan__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
</CustomField>