force-app/main/default/objects/HealthScan__c/fields/TriggeredBy__c.field-meta.xml
<CustomField>
    <fullName>TriggeredBy__c</fullName>
    <label>Triggered By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Health Scans Triggered</relationshipLabel>
    <relationshipName>HealthScansTriggered</relationshipName>
</CustomField>