force-app/main/default/objects/HealthScan__c/fields/TriggerType__c.field-meta.xml
<CustomField>
    <fullName>TriggerType__c</fullName>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
            <value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value>
            <value><fullName>API</fullName><default>false</default><label>API</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>